make my profile prettier

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <div class="heading">
           <h1>Hello there, I'm ChiChi</h1>
           <img src="images/profile_photo.jpeg" alt="profile photo">
-          <p>I'm an engineer👷🏻‍♀️ who spends too much time baking 🥐 not enough time coding 👩🏻‍💻 </p>
+          <p>I'm an engineer👷🏻‍♀️ who spends too much time BAKING 🥐 not enough time coding 👩🏻‍💻 </p>
           <a href="https://kitt.lewagon.com/" class="button" target="_blank"> Discover Le Wagon</a>
           </div>
         </div>
