make my profile prettier

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
           <li> <a href="#" class = icon_style>
             <i class="fab fa-linkedin-in"></i></a></li>
 
-          <li><a href="#" class = icon_style>
-            <i class="fab fa-twitter"></i></a></li>
+          <li><a href="https://www.instagram.com/accounts/jenniferaniston/" class = icon_style>
+            <i class="fa-brands fa-instagram"></i></a></li>
         </ul>
         </div>
       </div>
