--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
         <div class="follow_me">
         <h3>Follow me</h3>
         <ul class="list">
-          <li><a href="#" class = icon_style id = "fb_icon" >
+          <li><a href="www.facebook.com" class = icon_style id = "fb_icon" target="_blank" >
               <i class="fab fa-facebook-f"></i>
             </a>
           </li>
 
-          <li> <a href="#" class = icon_style>
+          <li> <a href="www.youtube.com" class = icon_style target="_blank">
             <i class="fab fa-linkedin-in"></i></a></li>
 
-          <li><a href="https://www.instagram.com/accounts/jenniferaniston/" class = icon_style>
-            <i class="fa-brands fa-instagram"></i></a></li>
+          <li><a href="www.google.com" class = icon_style target="_blank">
+            <i class="fab fa-twitter"></i></a></li>
         </ul>
         </div>
       </div>
