--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
         <div class="follow_me">
         <h3>Follow me</h3>
         <ul class="list">
-          <li><a href="www.facebook.com" class = icon_style id = "fb_icon" target="_blank" >
+          <li><a href="https://facebook.com" class = icon_style id = "fb_icon" target="_blank" >
               <i class="fab fa-facebook-f"></i>
             </a>
           </li>
 
-          <li> <a href="www.youtube.com" class = icon_style target="_blank">
+          <li> <a href="https://youtube.com" class = icon_style target="_blank">
             <i class="fab fa-linkedin-in"></i></a></li>
 
-          <li><a href="www.google.com" class = icon_style target="_blank">
+          <li><a href="https://google.com.au" class = icon_style target="_blank">
             <i class="fab fa-twitter"></i></a></li>
         </ul>
         </div>
